@@ -1,3 +1,9 @@
+2016-07-23
+- Replace unreliable _ftok with more reliable string hash
+
+2016-07-20
+- Aggregate using in+out bytes for bidirectional flows
+
 2016-06-05 v.1.6.15
 - Fix Security issue http://www.security-assessment.com/files/documents/advisory/Nfdump%20nfcapd%201.6.14%20-%20Multiple%20Vulnerabilities.pdf
 - Fix obyte, opps and obps output records
